fix(field): added wrapping story

--- a/src/less/field/field.less
+++ b/src/less/field/field.less
@@ -40,6 +40,7 @@ div.field--table {
 }
 
 .field__description--group > :last-child {
+    margin-left: 5px;
     text-align: right;
 }
 
@@ -166,6 +167,7 @@ div.field__description {
 
 [dir="rtl"] {
     .field__description--group > :last-child {
+        margin-right: 5px;
         text-align: left;
     }
 }
